--- a/index.html
+++ b/index.html
@@ -284,11 +284,11 @@
 <div id="ifliter0">
   <h3>PROLOGUE vs 11min</h3>
   <iframe
-    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/c1ea58e9fec871ae5076dfa0bcd5dabe/iframe?poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fc1ea58e9fec871ae5076dfa0bcd5dabe%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-    style="border: none;"
-    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-    allowfullscreen="true"
-  ></iframe>
+     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/c1ea58e9fec871ae5076dfa0bcd5dabe/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fc1ea58e9fec871ae5076dfa0bcd5dabe%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+     style="border: none;"
+     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+     allowfullscreen="true"
+   ></iframe>
  </div>
  <div id="ifliter1">
    <h3>PROLOGUE vs 23min</h3>
