--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
   <!--  TODO CONTENT video cloudflare-->
 <div id="ifliter0">
-  <h3>PROLOGUE vs 11MIN</h3>
+  <h3>PROLOGUE VS 11 min</h3>
   <iframe
     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/26a6bcd9e7690526241307fd2f3b5fca/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F26a6bcd9e7690526241307fd2f3b5fca%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
     style="border: none;"
@@ -291,16 +291,16 @@
   ></iframe>
  </div>
  <div id="ifliter1">
-   <h3>PROLOGUE vs 23MIN</h3>
+   <h3>PROLOGUE VS 23 min</h3>
    <iframe
-     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/26a6bcd9e7690526241307fd2f3b5fca/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F26a6bcd9e7690526241307fd2f3b5fca%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/e460f90f38af6c633dd8445b47edbd3d/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fe460f90f38af6c633dd8445b47edbd3d%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
      style="border: none;"
      allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
      allowfullscreen="true"
    ></iframe>
   </div>
   <div id="ifliter2">
-    <h3>FOCALE vs LOW LIGHT...</h3>
+    <h3>FOCALE VS LOW LIGHT...</h3>
     <iframe
       src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/a438355e30b696cae2bd24167556dbc8/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fa438355e30b696cae2bd24167556dbc8%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
       style="border: none;"
