--- a/index.html
+++ b/index.html
@@ -101,12 +101,14 @@
 
 
             <!--  TODO CONTENT video cloudflare..."
-            <iframe
-              src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/be234ea38fcf2cd991f9a686103efb1f/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fbe234ea38fcf2cd991f9a686103efb1f%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-              style="border: none;"
-              allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-              allowfullscreen="true"
-            ></iframe>
+            <div style="position: relative; padding-top: 52.734375%;">
+              <iframe
+                src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/8086f4a0a88dbc8a27c6c54c2fb7e1f4/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F8086f4a0a88dbc8a27c6c54c2fb7e1f4%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+                style="border: none; position: absolute; top: 0; left: 0; height: 100%; width: 100%;"
+                allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+                allowfullscreen="true"
+              ></iframe>
+            </div>
             -->
             <h1>#1 - MASTER JUILLET PROLOGUE</h1>
             <p><img src="images/retina/teasing-0@2x.jpg" alt="Sun" /></p>
@@ -283,21 +285,21 @@
   <!--  TODO CONTENT video cloudflare-->
 <div id="ifliter0">
   <h3>PROLOGUE VS 11 min</h3>
-  <iframe
-    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/be234ea38fcf2cd991f9a686103efb1f/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fbe234ea38fcf2cd991f9a686103efb1f%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-    style="border: none;"
-    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-    allowfullscreen="true"
-  ></iframe>
+      <iframe
+        src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/8086f4a0a88dbc8a27c6c54c2fb7e1f4/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F8086f4a0a88dbc8a27c6c54c2fb7e1f4%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+        style="border: none;"
+        allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+        allowfullscreen="true"
+      ></iframe>
  </div>
  <div id="ifliter1">
    <h3>PROLOGUE VS 23 min</h3>
    <iframe
-     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/fdbc06e002f45c88cc78df36c30f816e/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Ffdbc06e002f45c88cc78df36c30f816e%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-     style="border: none;"
-     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-     allowfullscreen="true"
-   ></iframe>
+      src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/755629a2d3b65a5338df67627a1dcace/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F755629a2d3b65a5338df67627a1dcace%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+      style="border: none;"
+      allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+      allowfullscreen="true"
+    ></iframe>
   </div>
   <div id="ifliter2">
     <h3>FOCALE VS LOW LIGHT...</h3>
