--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
       </nav>
 
       <figure><!--  TODO CONTENT PAGE ARCHIVE AND FRAME.IO-->
-            <p class="inners">& <a href="https://f.io/MVHnn8jV" rel="external">ARCHIVES</a></p>
-          <p class="frame"><a href="https://f.io/SUqhIlCV" rel="external">FRAME.IO</a></p>
+            <p class="inners">& <a href="https://f.io/eHO2ERGJ" rel="external">ARCHIVES</a></p>
+          <p class="frame"><a href="https://f.io/eha4lYTU" rel="external">FRAME.IO</a></p>
         </figure>
 		</header>
 
