--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 					</li>
 					<li>
 						<h1>#4 - MASTER JUILLET EXT 3</h1>
-            <p><img src="images/retina/teasing-3@2x.jpg" alt="Sun" /></p>
+            <p><img src="images/retina/teasing-42@2x.jpg" alt="Sun" /></p>
 					</li>
 					<li>
 						<h1>#5 - MASTER JUILLET EPILOGUE</h1>
