--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
    style="border: none;"
    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
    allowfullscreen="true"
- ></iframe>>
+ ></iframe>
   </div>
   <div id="ifliter2">
     <h3>PROLOGUE LOW LIGHT...</h3>
