--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
       </nav>
 
       <figure><!--  TODO CONTENT PAGE ARCHIVE AND FRAME.IO-->
-            <p class="inners">& <a href="https://f.io/MBBp3D-d" rel="external">ARCHIVES</a></p>
-          <p class="frame"><a href="https://f.io/Sc0qyhUg" rel="external">FRAME.IO</a></p>
+            <p class="inners">& <a href="https://f.io/zSN-DkKz" rel="external">ARCHIVES</a></p>
+          <p class="frame"><a href="https://f.io/n9fMpn8v" rel="external">FRAME.IO</a></p>
         </figure>
 		</header>
 
