--- a/index.html
+++ b/index.html
@@ -282,31 +282,14 @@
 
   <!--  TODO CONTENT video cloudflare-->
 <div id="ifliter0">
-  <h3>PROLOGUE VS 11 min</h3>
-  <iframe
-      src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/ff3b8fad3e84406952aa9f425666bd0d/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fff3b8fad3e84406952aa9f425666bd0d%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-      style="border: none;"
-      allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-      allowfullscreen="true"
-    ></iframe>
+  <h3>PROLOGUE VS 11 min <br />EN COURS VIDEO</h3>
+
  </div>
  <div id="ifliter1">
-   <h3>PROLOGUE VS 23 min</h3>
-   <iframe
-     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/ff3b8fad3e84406952aa9f425666bd0d/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fff3b8fad3e84406952aa9f425666bd0d%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-     style="border: none;"
-     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-     allowfullscreen="true"
-   ></iframe>
+   <h3>PROLOGUE VS 23 min<br />EN COURS VIDEO</h3>
   </div>
   <div id="ifliter2">
-    <h3>PROLOGUE LOW LIGHT...</h3>
-    <iframe
-        src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/ff3b8fad3e84406952aa9f425666bd0d/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2Fff3b8fad3e84406952aa9f425666bd0d%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-        style="border: none;"
-        allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-        allowfullscreen="true"
-      ></iframe>
+    <h3>PROLOGUE LOW LIGHT...<br />EN COURS VIDEO</h3>
    </div>
  </aside>
 </section>
