--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
 
             <!--  TODO CONTENT video cloudflare..."
             <iframe
-               src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/6a83cd5e1adcd4726cc8e7d68cfa88b9/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F6a83cd5e1adcd4726cc8e7d68cfa88b9%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-               style="border: none;"
-               allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-               allowfullscreen="true"
-             ></iframe>
+              src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/4b5c64216a5b4d28a364f33a92a6e884/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F4b5c64216a5b4d28a364f33a92a6e884%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+              style="border: none;"
+              allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+              allowfullscreen="true"
+            ></iframe>
             -->
             <h1>#1 - MASTER JUILLET PROLOGUE</h1>
             <p><img src="images/retina/teasing-0@2x.jpg" alt="Sun" /></p>
@@ -114,7 +114,7 @@
 					</li>
 					<li>
 						<h1>#2 - MASTER JUILLET EXT 1</h1>
-            <p><img src="images/retina/teasing-2@2x.jpg" alt="Sun" /></p>
+            <p><img src="images/retina/teasing-2@20x.jpg" alt="Sun" /></p>
 					</li>
 					<li>
 						<h1>#3 - MASTER JUILLET EXT 2</h1>
@@ -282,14 +282,31 @@
 
   <!--  TODO CONTENT video cloudflare-->
 <div id="ifliter0">
-  <h3>PROLOGUE VS 11 min <br />EN COURS VIDEO</h3>
-
+  <h3>PROLOGUE VS 11 min</h3>
+  <iframe
+    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/4b5c64216a5b4d28a364f33a92a6e884/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F4b5c64216a5b4d28a364f33a92a6e884%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+    style="border: none;"
+    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+    allowfullscreen="true"
+  ></iframe>
  </div>
  <div id="ifliter1">
-   <h3>PROLOGUE VS 23 min<br />EN COURS VIDEO</h3>
+   <h3>PROLOGUE VS 23 min</h3>
+   <iframe
+     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/4b5c64216a5b4d28a364f33a92a6e884/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F4b5c64216a5b4d28a364f33a92a6e884%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+     style="border: none;"
+     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+     allowfullscreen="true"
+   ></iframe>
   </div>
   <div id="ifliter2">
-    <h3>PROLOGUE LOW LIGHT...<br />EN COURS VIDEO</h3>
+    <h3>PROLOGUE LOW LIGHT...</h3>
+    <iframe
+      src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/4b5c64216a5b4d28a364f33a92a6e884/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F4b5c64216a5b4d28a364f33a92a6e884%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+      style="border: none;"
+      allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+      allowfullscreen="true"
+    ></iframe>
    </div>
  </aside>
 </section>
