--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
 					</li>
 					<li>
 						<h1>#3 - MASTER JUILLET EXT 2</h1>
-           <p><img src="images/retina/teasing-2@21x.jpg" alt="Sun" /></p>
+           <p><img src="images/retina/teasing-2@20x.jpg" alt="Sun" /></p>
 					</li>
 					<li>
 						<h1>#4 - MASTER JUILLET EXT 3</h1>
-            <p><img src="images/retina/teasing-3@2x.jpg" alt="Sun" /></p>
+            <p><img src="images/retina/teasing-2@20x.jpg" alt="Sun" /></p>
 					</li>
 					<li>
 						<h1>#5 - MASTER JUILLET EPILOGUE</h1>
@@ -198,13 +198,12 @@
             <a href="#s-liter" id="liters" class="liters">Tournage</a></li>
           <li id="deo"><a style="display:none" href="#s-video" id="vid" class="vid">Dire</a>
             <a href="#s-video" id="vids" class="vids">Dire</a></li>
-            <!--  <li id="sons" class="inners"><a href="https://f.io/HMKQ23_Q"> - SONS &</a></li>-->
         </ul>
       </nav>
 
       <figure><!--  TODO CONTENT PAGE ARCHIVE AND FRAME.IO-->
-            <p class="inners">& <a href="https://f.io/zSN-DkKz" rel="external">ARCHIVES</a></p>
-          <p class="frame"><a href="https://f.io/n9fMpn8v" rel="external">FRAME.IO</a></p>
+            <p class="inners">& <a href="https://f.io/HVQSsbue" rel="external">ARCHIVES</a></p>
+          <p class="frame"><a href="https://frame.io" rel="external">FRAME.IO</a></p>
         </figure>
 		</header>
 
