--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
             <!--  TODO CONTENT video cloudflare..."
             <iframe
-              src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/4b5c64216a5b4d28a364f33a92a6e884/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F4b5c64216a5b4d28a364f33a92a6e884%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+              src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/5bc5e72cad465d7724b84fa06dbbb521/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F5bc5e72cad465d7724b84fa06dbbb521%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
               style="border: none;"
               allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
               allowfullscreen="true"
@@ -118,11 +118,11 @@
 					</li>
 					<li>
 						<h1>#3 - MASTER JUILLET EXT 2</h1>
-           <p><img src="images/retina/teasing-2@20x.jpg" alt="Sun" /></p>
+           <p><img src="images/retina/teasing-1@2x.jpg" alt="Sun" /></p>
 					</li>
 					<li>
 						<h1>#4 - MASTER JUILLET EXT 3</h1>
-            <p><img src="images/retina/teasing-2@20x.jpg" alt="Sun" /></p>
+            <p><img src="images/retina/teasing-3@2x.jpg" alt="Sun" /></p>
 					</li>
 					<li>
 						<h1>#5 - MASTER JUILLET EPILOGUE</h1>
@@ -281,31 +281,13 @@
 
   <!--  TODO CONTENT video cloudflare-->
 <div id="ifliter0">
-  <h3>PROLOGUE VS 11 min</h3>
-  <iframe
-    src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/4b5c64216a5b4d28a364f33a92a6e884/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F4b5c64216a5b4d28a364f33a92a6e884%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-    style="border: none;"
-    allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-    allowfullscreen="true"
-  ></iframe>
+  <h3>PROLOGUE VS 11 min <br /> EN COURS DE RÉALISATION</h3>
  </div>
  <div id="ifliter1">
-   <h3>PROLOGUE VS 23 min</h3>
-   <iframe
-     src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/4b5c64216a5b4d28a364f33a92a6e884/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F4b5c64216a5b4d28a364f33a92a6e884%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-     style="border: none;"
-     allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-     allowfullscreen="true"
-   ></iframe>
+   <h3>PROLOGUE VS 23 min <br /> EN COURS DE RÉALISATION</h3>
   </div>
   <div id="ifliter2">
-    <h3>PROLOGUE LOW LIGHT...</h3>
-    <iframe
-      src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/4b5c64216a5b4d28a364f33a92a6e884/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F4b5c64216a5b4d28a364f33a92a6e884%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
-      style="border: none;"
-      allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-      allowfullscreen="true"
-    ></iframe>
+    <h3>PROLOGUE LOW LIGHT...<br /> EN COURS DE RÉALISATION</h3>
    </div>
  </aside>
 </section>
