--- a/index.html
+++ b/index.html
@@ -102,15 +102,14 @@
 
             <!--  TODO CONTENT video cloudflare..."
             <iframe
-              src="https://customer-xva04rw99f0eh4nu.cloudflarestream.com/5bc5e72cad465d7724b84fa06dbbb521/iframe?preload=true&loop=true&poster=https%3A%2F%2Fcustomer-xva04rw99f0eh4nu.cloudflarestream.com%2F5bc5e72cad465d7724b84fa06dbbb521%2Fthumbnails%2Fthumbnail.jpg%3Ftime%3D%26height%3D600"
+              src=""
               style="border: none;"
               allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
               allowfullscreen="true"
             ></iframe>
             -->
             <h1>#1 - MASTER JUILLET PROLOGUE</h1>
-            <p><img src="images/retina/teasing-0@2x.jpg" alt="Sun" /></p>
-
+            <p><img src="images/retina/teasing-2@20x.jpg" alt="Sun" /></p>
 					</li>
 					<li>
 						<h1>#2 - MASTER JUILLET EXT 1</h1>
@@ -118,15 +117,15 @@
 					</li>
 					<li>
 						<h1>#3 - MASTER JUILLET EXT 2</h1>
-           <p><img src="images/retina/teasing-1@2x.jpg" alt="Sun" /></p>
+           <p><img src="images/retina/teasing-2@20x.jpg" alt="Sun" /></p>
 					</li>
 					<li>
 						<h1>#4 - MASTER JUILLET EXT 3</h1>
-            <p><img src="images/retina/teasing-3@2x.jpg" alt="Sun" /></p>
+            <p><img src="images/retina/teasing-2@20x.jpg" alt="Sun" /></p>
 					</li>
 					<li>
 						<h1>#5 - MASTER JUILLET EPILOGUE</h1>
-            <p><img src="images/retina/teasing-4@2x.jpg" alt="Sun" /></p>
+            <p><img src="images/retina/teasing-2@20x.jpg" alt="Sun" /></p>
 					</li>
 				</ul>
 			</article>
@@ -324,21 +323,6 @@
 	<script src="scripts/screenfull.js" type="text/javascript"></script>
 	<script src="scripts/device.js" type="text/javascript"></script>
 	<script src="scripts/video.js" type="text/javascript"></script>
- <!--
-  <script src="https://embed.cloudflarestream.com/embed/sdk.latest.js"></script>
-
-<script>
-  const player = Stream(document.getElementById('stream-player'));
-  player.addEventListener('play', () => {
-    console.log('playing!');
-  });
-  player.play().catch(() => {
-    console.log('playback failed, muting to try again');
-    player.muted = true;
-    player.play();
-  });
-</script>
- -->
 
 </body>
 </html>
