--- a/index.html
+++ b/index.html
@@ -97,17 +97,9 @@
             </video>
              -->
 
-          <!--  TODO CONTENT video QUALITÉ DU STREAMING A VOIR...-->
-
-
-            <!--  TODO CONTENT video cloudflare..."
-            <iframe
-              src=""
-              style="border: none;"
-              allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
-              allowfullscreen="true"
-            ></iframe>
-            -->
+            <!--  TODO CONTENT video QUALITÉ DU STREAMING A VOIR...-->
+            <!--  TODO CONTENT video cloudflare..." -->
+		  
             <h1>#1 - MASTER JUILLET PROLOGUE</h1>
             <p><img src="images/retina/teasing-2@20x.jpg" alt="Sun" /></p>
 					</li>
