--- a/index.html
+++ b/index.html
@@ -97,9 +97,17 @@
             </video>
              -->
 
-            <!--  TODO CONTENT video QUALITÉ DU STREAMING A VOIR...-->
-            <!--  TODO CONTENT video cloudflare..." -->
-		  
+          <!--  TODO CONTENT video QUALITÉ DU STREAMING A VOIR...-->
+
+
+            <!--  TODO CONTENT video cloudflare..."
+            <iframe
+              src=""
+              style="border: none;"
+              allow="accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;"
+              allowfullscreen="true"
+            ></iframe>
+            -->
             <h1>#1 - MASTER JUILLET PROLOGUE</h1>
             <p><img src="images/retina/teasing-2@20x.jpg" alt="Sun" /></p>
 					</li>
@@ -109,15 +117,15 @@
 					</li>
 					<li>
 						<h1>#3 - MASTER JUILLET EXT 2</h1>
-           <p><img src="images/retina/teasing-2@22x.jpg" alt="Sun" /></p>
+           <p><img src="images/retina/teasing-2@30x.jpg" alt="Sun" /></p>
 					</li>
 					<li>
 						<h1>#4 - MASTER JUILLET EXT 3</h1>
-            <p><img src="images/retina/teasing-2@23x.jpg" alt="Sun" /></p>
+            <p><img src="images/retina/teasing-2@31x.jpg" alt="Sun" /></p>
 					</li>
 					<li>
 						<h1>#5 - MASTER JUILLET EPILOGUE</h1>
-            <p><img src="images/retina/teasing-2@24x.jpg" alt="Sun" /></p>
+            <p><img src="images/retina/teasing-2@34x.jpg" alt="Sun" /></p>
 					</li>
 				</ul>
 			</article>
