--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </video>
              -->
 
-          <!--  TODO CONTENT video QUALITÉ DU STREAMING A VOIR...-->
+          <!--  TODO CONTENT video QUALITÉ DU STREAMING CLOUDFLARE A VOIR...-->
 
 
             <!--  TODO CONTENT video cloudflare..."
@@ -109,15 +109,15 @@
             ></iframe>
             -->
             <h1>#1 - MASTER JUILLET PROLOGUE</h1>
-            <p><img src="images/retina/teasing-2@20x.jpg" alt="Sun" /></p>
-					</li>
-					<li>
-						<h1>#2 - MASTER JUILLET EXT 1</h1>
             <p><img src="images/retina/teasing-2@30x.jpg" alt="Sun" /></p>
 					</li>
 					<li>
+						<h1>#2 - MASTER JUILLET EXT 1</h1>
+            <p><img src="images/retina/teasing-2@31x.jpg" alt="Sun" /></p>
+					</li>
+					<li>
 						<h1>#3 - MASTER JUILLET EXT 2</h1>
-           <p><img src="images/retina/teasing-2@31x.jpg" alt="Sun" /></p>
+           <p><img src="images/retina/teasing-2@21x.jpg" alt="Sun" /></p>
 					</li>
 					<li>
 						<h1>#4 - MASTER JUILLET EXT 3</h1>
